# mlops-framework

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ml-components-register.yml  ml-environment-build.yml  release-terraform-modules.yml  terraform-apply.yml  terraform-plan.yml
azure-ml/projects/sample-project/components/evaluate/: component.yml
azure-ml/projects/sample-project/components/preprocess/: component.yml
azure-ml/projects/sample-project/config/: README.md  dev.yml  prd.yml  qa.yml
terraform/modules/aml-registry/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/aml-workspace/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/container-registry/: README.md  outputs.tf  variables.tf
terraform/modules/keyvault/: README.md  main.tf  variables.tf
terraform/modules/monitoring/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/resource-group/: README.md
terraform/modules/storage-account/: README.md  main.tf  outputs.tf  variables.tf
terraform/projects/dev/: backend.tf  dev.tfvars  main.tf
terraform/projects/prd/: backend.tf  outputs.tf  prd.tfvars  providers.tf  variables.tf
terraform/projects/qa/: backend.tf  main.tf  outputs.tf  providers.tf  qa.tfvars
terraform/projects/shared/: backend.tf  main.tf  outputs.tf  shared.tfvars  variables.tf
terraform/templates/mlops-foundation/: main.tf  outputs.tf  variables.tf
terraform/templates/mlops-registry/: main.tf  outputs.tf  variables.tf
terraform/templates/mlops-workspace/: main.tf  outputs.tf  variables.tf
(+10 files in other folders)
