[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-mlops-framework"
version = "0.1.0"
description = "Azure MLOps Framework — shared utilities and ML pipeline helpers"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-ml>=1.12.0",
    "azure-identity>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.setuptools.packages.find]
where = ["shared/src"]
